Redigerat headers del

--- a/www/index.html
+++ b/www/index.html
@@ -1,106 +1,113 @@
 <!DOCTYPE html>
 <html lang="sv">
-  <head>
-    <title>4 i rad</title>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="/css/libs/bootstrap-4-beta.css">
-    <!-- Application specific CSS -->
-    <link rel="stylesheet" href="box-sizing.css">
-    <link rel="stylesheet" href="/css/style.css">
-    <link rel="stylesheet" href="/css/main.css">
+<head>
+  <title>4 i rad</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-  </head>
-  <body>
-    <header>
-      <div class="container-fluid p-0">
+  <!-- Bootstrap CSS -->
+  <link rel="stylesheet" href="/css/libs/bootstrap-4-beta.css">
+  <!-- Application specific CSS -->
+  <link rel="stylesheet" href="box-sizing.css">
+  <link rel="stylesheet" href="/css/style.css">
+  <link rel="stylesheet" href="/css/main.css">
+
+</head>
+
+<body>
+  <header>
+    <div class="container-fluid p-0">
+      <div class="row">
+        <nav class="col ml-3 navbar navbar-expand-lg navbar-dark bg-secondary">
+          <h1>4 i rad</h1>
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
+            aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse ml-5" id="navbarNav">
+            <ul class="navbar-nav">
+              <li class="nav-item active">
+                <a class="nav-link mr-5" href="/">Start
+                  <span class="sr-only">(current)</span>
+                </a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link mr-5" href="spel.html">Spela</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link mr-5" href="rules.html">Spelregler</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link mr-5" href="hiscore.html">HiScore</a>
+              </li>
+            </ul>
+          </div>
+        </nav>
+      </div>
+    </div>
+  </header>
+
+  <main>
+    <article>
+      <section class="container-fluid">
         <div class="row">
-          <nav class="col ml-3 mr-3 navbar-expand-lg navbar-dark bg-secondary">
-            <h1>4 i rad</h1>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-              <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse ml-5" id="navbarNav">
-              <ul class="navbar-nav">
-                <li class="nav-item active pl-5">
-                  <a class="nav-link" href="index.html">Start<span class="sr-only">(current)</span></a>
-                </li>
-                <li class="nav-item pl-5">
-                  <a class="nav-link" href="spel.html">Spela</a>
-                </li>
-                <li class="nav-item pl-5">
-                  <a class="nav-link" href="rules.html">Spelregler</a>
-                </li>
-                <li class="nav-item pl-5">
-                  <a class="nav-link" href="hiscore.html">HiScore</a>
-                </li>
-              </ul>
+          <div class="jumbotron col mt-5 ml-5">
+            <h1 class="display-3">Välkommen!</h1>
+            <hr class="my-4">
+            <p>Spela det klassiska spelet 4 i rad online!</p>
+            <p class="lead">
+              <a class="btn btn-light mt-4 float-right btn-lg" href="#" role="button">Spela!</a>
+            </p>
+          </div>
+          <div class="col">
+            <div class="fyrairadimg mt-5 mr-4">
+              <img src="/img/fyrairad.png">
             </div>
-          </nav>
+          </div>
         </div>
-      </div>
-    </header>
-    <main>
-      <article>
-        <section class="container-fluid">
-          <div class="row">
-              <div class="jumbotron col mt-5 ml-5">
-                <h1 class="display-3">Välkommen!</h1>
-                <hr class="my-4">
-                <p>Spela det klassiska spelet 4 i rad online!</p>
-                <p class="lead">
-                  <a class="btn btn-light mt-4 float-right btn-lg" href="#" role="button">Spela!</a>
-                </p>
-              </div>
-            <div class="col">
-              <div class="fyrairadimg mt-5 mr-4">
-                <img src="/img/fyrairad.png">
-              </div>
-            </div>
+        <div class="row w-25">
+          <div class="buttonsnav col mt-5 ml-5 mr-5 pl-5 bg-secondary">
+            <h1>Andra spel online!</h1>
+            <button type="button" href="#" class="btn btn-secondary btn-lg">Spel 1</button>
+            <button type="button" href="#" class="btn btn-secondary btn-lg">Spel 2</button>
+            <button type="button" href="#" class="btn btn-secondary btn-lg">Spel 3</button>
           </div>
-          <div class="row w-25">
-            <div class="buttonsnav col mt-5 ml-5 mr-5 pl-5 bg-secondary">
-              <h1>Andra spel online!</h1>
-                <button type="button" href="#" class="btn btn-secondary btn-lg">Spel 1</button>
-                <button type="button" href="#" class="btn btn-secondary btn-lg">Spel 2</button>
-                <button type="button" href="#" class="btn btn-secondary btn-lg">Spel 3</button>
-            </div>
-          </div>
-        </section>
-      </article>
-    </main>
-    <footer>
-      <div>
-        <p>Adress:</p>
-        <p>Kungsgatan 88</p>
-        <p>Malmö, Sweden</p>
-      </div>
-      <div>
-        <p>http://www.fourinalinegame.se</p>
-        <p>email: info@fourinalinegame.se</p>
-        <p>email: anja@fourinalinegame.se</p>
-      </div>
-      <div>
-        <p>Kontakt:  Anna Karlsson</p>
-        <p>Telefon:  +46(0)123456789</p>
-        <p>Mobil:    +46(0)123456789</p>
-      </div>
-    </footer>
+        </div>
+      </section>
+    </article>
+  </main>
+  <footer>
+    <div>
+      <p>Adress:</p>
+      <p>Kungsgatan 88</p>
+      <p>Malmö, Sweden</p>
+    </div>
+    <div>
+      <p>http://www.fourinalinegame.se</p>
+      <p>email: info@fourinalinegame.se</p>
+      <p>email: anja@fourinalinegame.se</p>
+    </div>
+    <div>
+      <p>Kontakt: Anna Karlsson</p>
+      <p>Telefon: +46(0)123456789</p>
+      <p>Mobil: +46(0)123456789</p>
+    </div>
+  </footer>
 
 
-    <!-- JavaScript libraries -->
-    <script src="/jsonflex.js"></script>
-    <script src="/js/libs/jquery-3.2.1.js"></script>
-    <script src="/js/libs/popper-1.11.0.js"></script>
-    <script src="/js/libs/bootstrap-4-beta.js"></script>
-    <!-- Application specific JavaScript -->
-    <!-- Application specific JavaScript -->
-    <script src="/js/classes/base.class.js"></script>
-    <script src="/js/classes/player.class.js"></script>
-    <script src="/js/classes/game.class.js"></script>
-    <script src="/js/classes/hiscore.class.js"></script>
-    <script src="/js/main.js"></script>
-  </body>
+  <!-- JavaScript libraries -->
+  <script src="/jsonflex.js"></script>
+  <script src="/js/libs/jquery-3.2.1.js"></script>
+  <script src="/js/libs/popper-1.11.0.js"></script>
+  <script src="/js/libs/bootstrap-4-beta.js"></script>
+  <!-- Application specific JavaScript -->
+  <!-- Application specific JavaScript -->
+  <script src="/js/classes/base.class.js"></script>
+  <script src="/js/classes/player.class.js"></script>
+  <script src="/js/classes/game.class.js"></script>
+  <script src="/js/classes/hiscore.class.js"></script>
+  <script src="/js/main.js"></script>
+</body>
+
 </html>
