Ändrat footer med bootstap.

--- a/www/hiscore.html
+++ b/www/hiscore.html
@@ -18,7 +18,7 @@
       <div class="container-fluid p-0">
         <div class="row">
           <nav class="col ml-3 mr-3 navbar navbar-expand-lg navbar-dark bg-secondary">
-            <h2>Fyra i rad</h2>
+            <h2>4 i rad</h2>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
@@ -58,21 +58,30 @@
       </article>
     </main>
     <footer>
-      <div>
-        <p>Adress:</p>
-        <p>Kungsgatan 88</p>
-        <p>Malmö, Sweden</p>
+      <div class="container-fluid">
+        <div class="row col-12">
+
+          <div class="col-12 col-md-4 mt-2">
+            <p>Adress:</p>
+            <p>Kungsgatan 88</p>
+            <p>Malmö, Sweden</p>
+          </div>
+
+          <div class="col-12 col-md-4 mt-2">
+            <p>http://www.fourinalinegame.se</p>
+            <p>email: info@fourinalinegame.se</p>
+            <p>email: anja@fourinalinegame.se</p>
+          </div>
+
+          <div class="col-12 col-md-4 mt-2">
+            <p>Kontakt:  Anna Karlsson</p>
+            <p>Telefon:  +46(0)123456789</p>
+            <p>Mobil:    +46(0)123456789</p>
+          </div>
+
+        </div>
       </div>
-      <div>
-        <p>http://www.fourinalinegame.se</p>
-        <p>email: info@fourinalinegame.se</p>
-        <p>email: anja@fourinalinegame.se</p>
-      </div>
-      <div>
-        <p>Kontakt:  Anna Karlsson</p>
-        <p>Telefon:  +46(0)123456789</p>
-        <p>Mobil:    +46(0)123456789</p>
-      </div>
+
     </footer>
 
     <!-- JavaScript libraries -->
