--- a/www/spel.html
+++ b/www/spel.html
@@ -52,38 +52,31 @@
       </article>
     </main>
     <footer>
-      <div>
-        <p>Adress:</p>
-        <p>Kungsgatan 88</p>
-        <p>Malmö, Sweden</p>
-      </div>
-      <div>
-        <p>http://www.fourinalinegame.se</p>
-        <p>email: info@fourinalinegame.se</p>
-        <p>email: anja@fourinalinegame.se</p>
-      </div>
-      <div>
-        <p>Kontakt:  Anna Karlsson</p>
-        <p>Telefon:  +46(0)123456789</p>
-        <p>Mobil:    +46(0)123456789</p>
+      
+      <div class="container-fluid">
+        <div class="row col-12">
+
+          <div class="col-12 col-md-4 mt-2">
+            <p>Adress:</p>
+            <p>Kungsgatan 88</p>
+            <p>Malmö, Sweden</p>
+          </div>
+
+          <div class="col-12 col-md-4 mt-2">
+            <p>http://www.fourinalinegame.se</p>
+            <p>email: info@fourinalinegame.se</p>
+            <p>email: anja@fourinalinegame.se</p>
+          </div>
+
+          <div class="col-12 col-md-4 mt-2">
+            <p>Kontakt:  Anna Karlsson</p>
+            <p>Telefon:  +46(0)123456789</p>
+            <p>Mobil:    +46(0)123456789</p>
+          </div>
+
+        </div>
       </div>
     </footer>
-
-    <!-- <ul class="list-group">
-      <li class="list-group-item d-flex justify-content-between align-items-center">
-        Spelare 1
-        <span class="badge badge-primary badge-pill">14</span>
-      </li>
-      <li class="list-group-item d-flex justify-content-between align-items-center">
-        Spelare 2
-        <span class="badge badge-primary badge-pill">2</span>
-      </li>
-      <li class="list-group-item d-flex justify-content-between align-items-center">
-        Spelare 3
-        <span class="badge badge-primary badge-pill">1</span>
-      </li>
-    </ul> -->
-
 
     <!-- JavaScript libraries -->
     <script src="/jsonflex.js"></script>
