--- a/www/rules.html
+++ b/www/rules.html
@@ -15,37 +15,30 @@
 </head>
 
 <body>
-	<header>
-		<div class="container-fluid p-0">
-			<div class="row">
-				<nav class="col ml-3 navbar navbar-expand-lg navbar-dark bg-secondary">
-					<h1>4 i rad</h1>
-					<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
-					 aria-label="Toggle navigation">
-						<span class="navbar-toggler-icon"></span>
-					</button>
-					<div class="collapse navbar-collapse ml-5" id="navbarNav">
-						<ul class="navbar-nav">
-							<li class="nav-item active pl-5">
-								<a class="nav-link" href="/">Start
-									<span class="sr-only">(current)</span>
-								</a>
-							</li>
-							<li class="nav-item pl-5">
-								<a class="nav-link" href="spel.html">Spela</a>
-							</li>
-							<li class="nav-item pl-5">
-								<a class="nav-link" href="rules.html">Spelregler</a>
-							</li>
-							<li class="nav-item pl-5">
-								<a class="nav-link" href="hiscore.html">HiScore</a>
-							</li>
-						</ul>
-					</div>
-				</nav>
-			</div>
-		</div>
-	</header>
+    <header class="container-fluid p-0">
+      <nav class="col navbar-expand-lg navbar-dark bg-secondary">
+        <h1>4 i rad</h1>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse ml-5" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item active pl-5">
+              <a class="nav-link" href="index.html">Start<span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item pl-5">
+              <a class="nav-link" href="spel.html">Spela</a>
+            </li>
+            <li class="nav-item pl-5">
+              <a class="nav-link" href="rules.html">Spelregler</a>
+            </li>
+            <li class="nav-item pl-5">
+              <a class="nav-link" href="hiscore.html">HiScore</a>
+            </li>
+          </ul>
+        </div>
+      </nav>
+    </header>
 
 
 	<main class="rules container my-5">
@@ -86,7 +79,7 @@
 
 
 		<div class="row">
-			<div class="col-12 col-md-4 mb-5">
+			<div class="col-12 col-md-4">
 				<div class="card">
 					<img class="card-img-top" src="/img/rules/rules-6.png" alt="Card image cap">
 					<div class="card-body">
@@ -101,7 +94,7 @@
 				</div>
 			</div>
 
-			<div class="col-12 col-md-4 mb-5">
+			<div class="col-12 col-md-4">
 				<div class="card">
 					<img class="card-img-top" src="/img/rules/rules-2.png" alt="Card image cap">
 					<div class="card-body">
@@ -115,7 +108,7 @@
 				</div>
 			</div>
 
-			<div class="col-12 col-md-4 mb-5">
+			<div class="col-12 col-md-4">
 				<div class="card">
 					<img class="card-img-top" src="/img/rules/rules-7.png" alt="Card image cap">
 					<div class="card-body">
@@ -135,8 +128,7 @@
 		</div>
 	</main>
 
-	<footer>
-    <div class="container-fluid">
+     <footer class="container-fluid bg-secondary mt-sm-5">
       <div class="row col-12">
 
         <div class="col-12 col-md-4 mt-2">
@@ -158,8 +150,7 @@
         </div>
 
       </div>
-    </div>
-	</footer>
+    </footer>
 
 
 	<!-- JavaScript libraries -->
