--- a/www/spel.html
+++ b/www/spel.html
@@ -15,38 +15,30 @@
 </head>
 
 <body>
-  <header>
-    <div class="container-fluid p-0">
-      <div class="row">
-        <nav class="col ml-3 navbar navbar-expand-lg navbar-dark bg-secondary">
-          <h1>4 i rad</h1>
-          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
-            aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse ml-5" id="navbarNav">
-            <ul class="navbar-nav">
-              <li class="nav-item active">
-                <a class="nav-link mr-5" href="/">Start
-                  <span class="sr-only">(current)</span>
-                </a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link mr-5" href="spel.html">Spela</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link mr-5" href="rules.html">Spelregler</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link mr-5" href="hiscore.html">HiScore</a>
-              </li>
-            </ul>
-          </div>
-
-        </nav>
-      </div>
-    </div>
-  </header>
+    <header class="container-fluid p-0">
+      <nav class="col navbar-expand-lg navbar-dark bg-secondary">
+        <h1>4 i rad</h1>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse ml-5" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item active pl-5">
+              <a class="nav-link" href="index.html">Start<span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item pl-5">
+              <a class="nav-link" href="spel.html">Spela</a>
+            </li>
+            <li class="nav-item pl-5">
+              <a class="nav-link" href="rules.html">Spelregler</a>
+            </li>
+            <li class="nav-item pl-5">
+              <a class="nav-link" href="hiscore.html">HiScore</a>
+            </li>
+          </ul>
+        </div>
+      </nav>
+    </header>
 
   <main>
     <article>
@@ -58,30 +50,29 @@
     </article>
   </main>
 
- <footer class="container-fluid">
-      
-        <div class="row col-12">
+     <footer class="container-fluid bg-secondary mt-sm-5">
+      <div class="row col-12">
 
-          <div class="col-12 col-md-4 mt-2">
-            <p>Adress:</p>
-            <p>Kungsgatan 88</p>
-            <p>Malmö, Sweden</p>
-          </div>
+        <div class="col-12 col-md-4 mt-2">
+          <p>Adress:</p>
+          <p>Kungsgatan 88</p>
+          <p>Malmö, Sweden</p>
+        </div>
 
-          <div class="col-12 col-md-4 mt-2">
-            <p>http://www.fourinalinegame.se</p>
-            <p>email: info@fourinalinegame.se</p>
-            <p>email: anja@fourinalinegame.se</p>
-          </div>
+        <div class="col-12 col-md-4 mt-2">
+          <p>http://www.fourinalinegame.se</p>
+          <p>email: info@fourinalinegame.se</p>
+          <p>email: anja@fourinalinegame.se</p>
+        </div>
 
-          <div class="col-12 col-md-4 mt-2">
-            <p>Kontakt:  Anna Karlsson</p>
-            <p>Telefon:  +46(0)123456789</p>
-            <p>Mobil:    +46(0)123456789</p>
-          </div>
+        <div class="col-12 col-md-4 mt-2">
+          <p>Kontakt:  Anna Karlsson</p>
+          <p>Telefon:  +46(0)123456789</p>
+          <p>Mobil:    +46(0)123456789</p>
+        </div>
 
-
-  </footer>
+      </div>
+    </footer>
 
 
   <!-- JavaScript libraries -->
