Ändrat headers del ( i hiscore, rules och spel.html).

--- a/www/hiscore.html
+++ b/www/hiscore.html
@@ -20,26 +20,26 @@
     <div class="container-fluid p-0">
       <div class="row">
         <nav class="col ml-3 navbar navbar-expand-lg navbar-dark bg-secondary">
-          <h2>4 i rad</h2>
+          <h1>4 i rad</h1>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
             aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse ml-5" id="navbarNav">
             <ul class="navbar-nav">
-              <li class="nav-item active">
-                <a class="nav-link mr-5" href="/">Start
+              <li class="nav-item pl-5">
+                <a class="nav-link" href="/">Start
                   <span class="sr-only">(current)</span>
                 </a>
               </li>
-              <li class="nav-item">
-                <a class="nav-link mr-5" href="spel.html">Spela</a>
+              <li class="nav-item pl-5">
+                <a class="nav-link" href="spel.html">Spela</a>
               </li>
-              <li class="nav-item">
-                <a class="nav-link mr-5" href="rules.html">Spelregler</a>
+              <li class="nav-item pl-5">
+                <a class="nav-link" href="rules.html">Spelregler</a>
               </li>
-              <li class="nav-item">
-                <a class="nav-link mr-5" href="hiscore.html">HiScore</a>
+              <li class="nav-item active pl-5">
+                <a class="nav-link" href="hiscore.html">HiScore</a>
               </li>
             </ul>
           </div>
@@ -59,35 +59,35 @@
             </div>
           </div>
         </div>
-        </section>
-      </article>
-    </main>
-    <footer>
-      <div class="container-fluid">
-        <div class="row col-12">
+      </section>
+    </article>
+  </main>
+  <footer>
+    <div class="container-fluid">
+      <div class="row col-12">
 
-          <div class="col-12 col-md-4 mt-2">
-            <p>Adress:</p>
-            <p>Kungsgatan 88</p>
-            <p>Malmö, Sweden</p>
-          </div>
-
-          <div class="col-12 col-md-4 mt-2">
-            <p>http://www.fourinalinegame.se</p>
-            <p>email: info@fourinalinegame.se</p>
-            <p>email: anja@fourinalinegame.se</p>
-          </div>
-
-          <div class="col-12 col-md-4 mt-2">
-            <p>Kontakt:  Anna Karlsson</p>
-            <p>Telefon:  +46(0)123456789</p>
-            <p>Mobil:    +46(0)123456789</p>
-          </div>
-
+        <div class="col-12 col-md-4 mt-2">
+          <p>Adress:</p>
+          <p>Kungsgatan 88</p>
+          <p>Malmö, Sweden</p>
         </div>
-      </div>
 
-    </footer>
+        <div class="col-12 col-md-4 mt-2">
+          <p>http://www.fourinalinegame.se</p>
+          <p>email: info@fourinalinegame.se</p>
+          <p>email: anja@fourinalinegame.se</p>
+        </div>
+
+        <div class="col-12 col-md-4 mt-2">
+          <p>Kontakt: Anna Karlsson</p>
+          <p>Telefon: +46(0)123456789</p>
+          <p>Mobil: +46(0)123456789</p>
+        </div>
+
+      </div>
+    </div>
+
+  </footer>
 
 
   <!-- JavaScript libraries -->
