--- a/www/rules.html
+++ b/www/rules.html
@@ -26,7 +26,7 @@
 					</button>
 					<div class="collapse navbar-collapse ml-5" id="navbarNav">
 						<ul class="navbar-nav">
-							<li class="nav-item active pl-5">
+							<li class="nav-item pl-5">
 								<a class="nav-link" href="/">Start
 									<span class="sr-only">(current)</span>
 								</a>
@@ -34,7 +34,7 @@
 							<li class="nav-item pl-5">
 								<a class="nav-link" href="spel.html">Spela</a>
 							</li>
-							<li class="nav-item pl-5">
+							<li class="nav-item active pl-5">
 								<a class="nav-link" href="rules.html">Spelregler</a>
 							</li>
 							<li class="nav-item pl-5">
@@ -105,7 +105,7 @@
 				<div class="card">
 					<img class="card-img-top" src="/img/rules/rules-2.png" alt="Card image cap">
 					<div class="card-body">
-						<h4 class="card-title font-weight-bold text-center mb-4">Klick en kolumn eller plats</h4>
+						<h4 class="card-title font-weight-bold text-center mb-4">Klicka en kolumn eller plats</h4>
 						<ul>
 							<li class="card-text mt-3">När man klickar på en kolumn eller en plats faller en marker ner.</li>
 							<li class="card-text mt-3">Försök sätta en vinnande rad, samtidigt som du hindrar motspelaren från att vinna.</li>
@@ -127,8 +127,9 @@
 							</li>
 						</ul>
 						<div>
-						<a href="#" class="btn btn-warning text-light font-weight-bold float-right mt-3"><span class="float-left pr-2">&#X1F3AE</span>Börja spela</a>
-					</div>
+							<a href="#" class="btn btn-warning text-light font-weight-bold float-right mt-3">
+								<span class="float-left pr-2">&#X1F3AE</span>Börja spela</a>
+						</div>
 					</div>
 				</div>
 			</div>
@@ -136,29 +137,29 @@
 	</main>
 
 	<footer>
-    <div class="container-fluid">
-      <div class="row col-12">
+		<div class="container-fluid">
+			<div class="row col-12">
 
-        <div class="col-12 col-md-4 mt-2">
-          <p>Adress:</p>
-          <p>Kungsgatan 88</p>
-          <p>Malmö, Sweden</p>
-        </div>
+				<div class="col-12 col-md-4 mt-2">
+					<p>Adress:</p>
+					<p>Kungsgatan 88</p>
+					<p>Malmö, Sweden</p>
+				</div>
 
-        <div class="col-12 col-md-4 mt-2">
-          <p>http://www.fourinalinegame.se</p>
-          <p>email: info@fourinalinegame.se</p>
-          <p>email: anja@fourinalinegame.se</p>
-        </div>
+				<div class="col-12 col-md-4 mt-2">
+					<p>http://www.fourinalinegame.se</p>
+					<p>email: info@fourinalinegame.se</p>
+					<p>email: anja@fourinalinegame.se</p>
+				</div>
 
-        <div class="col-12 col-md-4 mt-2">
-          <p>Kontakt:  Anna Karlsson</p>
-          <p>Telefon:  +46(0)123456789</p>
-          <p>Mobil:    +46(0)123456789</p>
-        </div>
+				<div class="col-12 col-md-4 mt-2">
+					<p>Kontakt: Anna Karlsson</p>
+					<p>Telefon: +46(0)123456789</p>
+					<p>Mobil: +46(0)123456789</p>
+				</div>
 
-      </div>
-    </div>
+			</div>
+		</div>
 	</footer>
 
 
@@ -169,10 +170,10 @@
 	<script src="/js/libs/bootstrap-4-beta.js"></script>
 	<!-- Application specific JavaScript -->
 	<script src="/js/classes/base.class.js"></script>
-  <script src="/js/classes/player.class.js"></script>
-  <script src="/js/classes/game.class.js"></script>
-  <script src="/js/classes/hiscore.class.js"></script>
-  <script src="/js/main.js"></script>
+	<script src="/js/classes/player.class.js"></script>
+	<script src="/js/classes/game.class.js"></script>
+	<script src="/js/classes/hiscore.class.js"></script>
+	<script src="/js/main.js"></script>
 </body>
 
 </html>
