--- a/www/spel.html
+++ b/www/spel.html
@@ -26,23 +26,22 @@
           </button>
           <div class="collapse navbar-collapse ml-5" id="navbarNav">
             <ul class="navbar-nav">
-              <li class="nav-item active">
-                <a class="nav-link mr-5" href="/">Start
+              <li class="nav-item pl-5">
+                <a class="nav-link" href="/">Start
                   <span class="sr-only">(current)</span>
                 </a>
               </li>
-              <li class="nav-item">
-                <a class="nav-link mr-5" href="spel.html">Spela</a>
+              <li class="nav-item pl-5">
+                <a class="nav-link active" href="spel.html">Spela</a>
               </li>
-              <li class="nav-item">
-                <a class="nav-link mr-5" href="rules.html">Spelregler</a>
+              <li class="nav-item pl-5">
+                <a class="nav-link" href="rules.html">Spelregler</a>
               </li>
-              <li class="nav-item">
-                <a class="nav-link mr-5" href="hiscore.html">HiScore</a>
+              <li class="nav-item pl-5">
+                <a class="nav-link" href="hiscore.html">HiScore</a>
               </li>
             </ul>
           </div>
-
         </nav>
       </div>
     </div>
@@ -58,27 +57,27 @@
     </article>
   </main>
 
- <footer class="container-fluid">
-      
-        <div class="row col-12">
+  <footer class="container-fluid">
 
-          <div class="col-12 col-md-4 mt-2">
-            <p>Adress:</p>
-            <p>Kungsgatan 88</p>
-            <p>Malmö, Sweden</p>
-          </div>
+    <div class="row col-12">
 
-          <div class="col-12 col-md-4 mt-2">
-            <p>http://www.fourinalinegame.se</p>
-            <p>email: info@fourinalinegame.se</p>
-            <p>email: anja@fourinalinegame.se</p>
-          </div>
+      <div class="col-12 col-md-4 mt-2">
+        <p>Adress:</p>
+        <p>Kungsgatan 88</p>
+        <p>Malmö, Sweden</p>
+      </div>
 
-          <div class="col-12 col-md-4 mt-2">
-            <p>Kontakt:  Anna Karlsson</p>
-            <p>Telefon:  +46(0)123456789</p>
-            <p>Mobil:    +46(0)123456789</p>
-          </div>
+      <div class="col-12 col-md-4 mt-2">
+        <p>http://www.fourinalinegame.se</p>
+        <p>email: info@fourinalinegame.se</p>
+        <p>email: anja@fourinalinegame.se</p>
+      </div>
+
+      <div class="col-12 col-md-4 mt-2">
+        <p>Kontakt: Anna Karlsson</p>
+        <p>Telefon: +46(0)123456789</p>
+        <p>Mobil: +46(0)123456789</p>
+      </div>
 
 
   </footer>
