Uppdaterat lite footer

--- a/www/spel.html
+++ b/www/spel.html
@@ -57,7 +57,7 @@
     </article>
   </main>
 
- <footer class="container-fluid">
+ <footer class="container-fluid bg-secondary">
       
         <div class="row col-12">
 
@@ -78,6 +78,8 @@
             <p>Telefon:  +46(0)123456789</p>
             <p>Mobil:    +46(0)123456789</p>
           </div>
+          </div>
+          
 
 
   </footer>
