--- a/www/rules.html
+++ b/www/rules.html
@@ -137,7 +137,7 @@
 	</main>
 
 	<footer>
-    <div class="container-fluid">
+    <div class="container-fluid bg-secondary">
       <div class="row col-12">
 
 				<div class="col-12 col-md-4 mt-2">
