Added select option på spel start

--- a/www/index.html
+++ b/www/index.html
@@ -56,7 +56,7 @@
             <hr class="my-4">
             <p>Spela det klassiska spelet 4 i rad online!</p>
             <p class="lead">
-              <a class="btn btn-light mt-4 float-right btn-lg" href="#" role="button">Spela!</a>
+              <a class="btn btn-light mt-4 float-right btn-lg" href="spel.html" role="button">Spela!</a>
             </p>
           </div>
           <div class="col-6">
